# next-core

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: cli.rs  download_basic_usage.rs  download_crash_recovery.rs  download_pause_resume.rs  layers_demo.rs
proto/: bottles.proto  winebridge.proto
src/: downloader.rs  error.rs  lib.rs  server.rs  utils.rs  virgo.rs  winebridge.rs
src/bottle/: bottle.rs  error.rs  manager.rs  mod.rs  snapshot.rs  tests.rs  virgo.rs
src/catalog/: mod.rs
src/catalog/component/: catalog.rs  component.rs  mod.rs
src/catalog/dependency/: catalog.rs  dependency.rs  mod.rs  steps.rs
src/compatibility/: catalog.rs  mod.rs
src/compatibility/components/: catalog.rs  component.rs  manager.rs  mod.rs
src/compatibility/components/catalog/: catalog.rs  manifest.rs  mod.rs
src/compatibility/dependencies/: catalog.rs  dependency.rs  manager.rs  mod.rs
src/compatibility/dependencies/catalog/: catalog.rs  manifest.rs  mod.rs
src/compatibility/installer/: mod.rs  recipes.rs
src/diff/: filesystem.rs  mod.rs  registry.rs
src/download/: README.md  backend.rs  events.rs  manager.rs  mod.rs  progress.rs  queue.rs  retry.rs  types.rs  worker.rs
src/downloader/: config.rs  handle.rs  manager.rs  mod.rs  progress.rs  request.rs  types.rs  worker.rs
src/layers/: mod.rs
src/runner/: gptk.rs  mod.rs  proton.rs  umu.rs  wine.rs
src/utils/: archive.rs  context.rs  directories.rs  environment.rs  mod.rs
src/wine/: bridge.rs
src/wrapper/: gamescope.rs  mangohud.rs  mod.rs
