[package]
name = "bottles-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tonic.workspace = true
tokio.workspace = true
prost.workspace = true
tonic-prost = "*"
walkdir = "2"

[dependencies.regdiff-rs]
git = "https://github.com/bottlesdevs/regdiff-rs"

[build-dependencies]
tonic-prost-build = "0.14"
