[package]
name = "bottles-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
next-config.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tonic.workspace = true
tonic-health.workspace = true
tokio.workspace = true
derive_builder.workspace = true
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["serde"] }
prost = "0.14"
prost-types = "0.14"
tonic-prost = "0.14"

[build-dependencies]
tonic-prost-build = "0.14"
