[package]
name = "bottles-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
async-trait.workspace = true
next-config.workspace = true
fvs-rs.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tonic.workspace = true
tonic-health.workspace = true
tokio.workspace = true
directories.workspace = true
flate2.workspace = true
tar.workspace = true
regdiff-rs.workspace = true
url = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["serde"] }
prost.workspace = true
prost-types.workspace = true
tonic-prost.workspace = true

[build-dependencies]
tonic-prost-build.workspace = true
